Added the Form Controller and created the whole functionality in a single page.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("List", "Index", "Student")</li>
+                    <li>@Html.ActionLink("List of Students", "Index", "Student")</li>
+                    <li>@Html.ActionLink("List of Students using Form Controller", "Index", "Form")</li>
                 </ul>
             </div>
         </div>
